# menoh-yolo

./: .gitignore  .gitmodules  Cargo.toml  Dockerfile  README.md  build.rs  convert.py  opencv_bindings.cpp  wrapper.h
src/: bb.rs  draw.rs  drawing.rs  main.rs  main_with_opencv.rs  main_without_opencv.rs  model_ext.rs  opencv.rs  partial_cmp.rs  rect.rs  yolo_v2.rs
src/opencv/: mod.rs  sys.rs
