[package]
name = "menoh-yolo"
version = "0.1.0"
build = "build.rs"

[features]
opencv = ["bindgen", "pkg-config"]

[dependencies]
docopt = "1.0"
image = "0.19"
menoh = "0.1"
ndarray = "0.11"
num-traits = "0.2"
serde = "1.0"
serde_derive = "1.0"

[build-dependencies]
bindgen = { version = "0.37", optional = true }
pkg-config = { version = "0.3", optional = true }
